--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+1.9.76.123.1:
+  - 增加zjy_plot脚本
+  - analyzers增加totalvalue脚本
+  - 增加jn_robot_mark目录，存放策略算法
+
 1.9.76.123:
   - PR#405 Fix initial Renko bricks
   - Add option to select fixing of initial Renko bricks
